# CF_RVIZ

./: README.md
ros_gz_example_application/: CMakeLists.txt  package.xml
ros_gz_example_application/include/: sedas_rot.hpp
ros_gz_example_application/src/: ButterworthFilter.cpp  csv_saver.cpp  ign_pubsub.cpp  pinocchio_try.cpp  sedas_key_publisher.cpp  sedas_rviz.cpp  sedas_traj.cpp
ros_gz_example_bringup/config/: ros_gz_example_bridge_manipulator.yaml
ros_gz_example_bringup/launch/: pinocchio_trying.py  rviz_visual.py
ros_gz_example_description/models/manipulator/: model.config  model.sdf  model.urdf
ros_gz_example_description/models/manipulator/meshes/: EE.dae  crazyflie.dae  curvature.dae  cylinder.STL.stl  deg20.STL.stl  sphere.dae
ros_gz_example_gazebo/: CMakeLists.txt  package.xml
ros_gz_example_gazebo/include/ros_gz_example_gazebo/: ExternalForcePlugin.hh  ForceTorquePlugin.hh
ros_gz_example_gazebo/src/: ExternalForcePlugin.cc  ForceTorquePlugin.cc
ros_gz_example_gazebo/worlds/: manipulator.sdf
